// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The FileList component should load a file's content when clicking on it 1`] = `
<div
  className="row"
>
  <div
    className="col-md-4"
  >
    <h2
      className="jsx-3437169214"
    >
      Uploaded Files
    </h2>
    <div
      className="jsx-3437169214 scrollable"
    >
      <div
        className="list-group"
        onKeyDown={[Function]}
      >
        <button
          className="list-group-item active list-group-item-action"
          data-rb-event-key={null}
          disabled={false}
          onClick={[Function]}
        >
          a.zip
        </button>
        <button
          className="list-group-item list-group-item-action"
          data-rb-event-key={null}
          disabled={false}
          onClick={[Function]}
        >
          b.zip
        </button>
        <button
          className="list-group-item list-group-item-action"
          data-rb-event-key={null}
          disabled={false}
          onClick={[Function]}
        >
          c.zip
        </button>
      </div>
    </div>
  </div>
  <div
    className="col-md-8"
  >
    Array [
      <div
        className="jsx-1433105309 details"
      >
        <h3
          className="jsx-1433105309"
        >
          a.zip
        </h3>
        <span
          className="jsx-1433105309"
        >
          69
          MB
        </span>
        <span
          className="jsx-1433105309"
        >
          Imported from ECCC on 
          Wed May 13 2020
        </span>
      </div>,
      <div
        className="jsx-1433105309 scrollable"
      >
        <div
          className="list-group"
          onKeyDown={[Function]}
        >
          <div
            className="list-group-item"
            data-rb-event-key={null}
            disabled={false}
            onClick={[Function]}
          >
            <a
              className="jsx-1433105309"
              href="/api/eccc/files/a.zip/download?filename=a.txt"
              rel="noreferrer"
              target="_blank"
            >
              a.txt
            </a>
          </div>
          <div
            className="list-group-item"
            data-rb-event-key={null}
            disabled={false}
            onClick={[Function]}
          >
            <a
              className="jsx-1433105309"
              href="/api/eccc/files/a.zip/download?filename=b.txt"
              rel="noreferrer"
              target="_blank"
            >
              b.txt
            </a>
          </div>
        </div>
      </div>,
      "",
    ]
  </div>
</div>
`;

exports[`The FileList component should load the list of files 1`] = `
<div
  className="row"
>
  <div
    className="col-md-4"
  >
    <h2
      className="jsx-3437169214"
    >
      Uploaded Files
    </h2>
    <div
      className="jsx-3437169214 scrollable"
    >
      <div
        className="list-group"
        onKeyDown={[Function]}
      >
        <button
          className="list-group-item list-group-item-action"
          data-rb-event-key={null}
          disabled={false}
          onClick={[Function]}
        >
          a.zip
        </button>
        <button
          className="list-group-item list-group-item-action"
          data-rb-event-key={null}
          disabled={false}
          onClick={[Function]}
        >
          b.zip
        </button>
        <button
          className="list-group-item list-group-item-action"
          data-rb-event-key={null}
          disabled={false}
          onClick={[Function]}
        >
          c.zip
        </button>
      </div>
    </div>
  </div>
  <div
    className="col-md-8"
  />
</div>
`;
